tests/build_fail/bseq_fail_ident_expr_u8_overflow.stderr
error: literal out of range for `u8`
 --> tests/build_fail/bseq_fail_ident_expr_u8_overflow.rs:5:23
  |
5 |     let _: u8 = bseq!(var:9);
  |                       ^^^
  |
  = note: the literal `var` does not fit into the type `u8` whose range is `0..=255`
  = note: `#[deny(overflowing_literals)]` on by default
