tests/build_fail/bseq_fail_ident_expr_u8_overflow.rs
use bit_seq::bseq;

fn main() {
    let var = 0;
    let _: u8 = bseq!(var:9);
}